syntax = "proto3";
package oracle_node;
option java_package = "bisq.oracle_node.protobuf";
option java_multiple_files = true;
import "common.proto";
import "network.proto";
import "user.proto";

message TimestampStore {
  repeated common.StringLongPair stringLongPairs = 1;
}

message Bisq1BridgeStore {
  repeated user.AuthorizeAccountAgeRequest accountAgeRequests = 1;
  repeated user.AuthorizeSignedWitnessRequest signedWitnessRequests = 2;
}
